[gd_scene load_steps=13 format=2]

[ext_resource path="res://PlacehoolderSprites/BG2.png" type="Texture" id=1]
[ext_resource path="res://Fonts/DynamicFonts/ClothesEnglish.tres" type="DynamicFont" id=2]
[ext_resource path="res://Sprites/WardrobeButtons/Belt.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Wardrobe/Blouse.png" type="Texture" id=4]
[ext_resource path="res://Fonts/ProductSans-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://ObjectScenes/InOverlay.tscn" type="PackedScene" id=6]
[ext_resource path="res://ObjectScenes/BackButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://DisplayScenes/Weather.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 42
outline_size = 4
outline_color = Color( 0.239216, 0.67451, 0.862745, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 2
outline_color = Color( 0.862745, 0.576471, 0.239216, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 24
outline_color = Color( 0.862745, 0.576471, 0.239216, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 30
outline_size = 1
outline_color = Color( 0.0941176, 0.494118, 0.45098, 1 )
font_data = ExtResource( 5 )

[node name="Weather" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -556.0
margin_top = -333.0
margin_right = 556.0
margin_bottom = 333.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 500.0
margin_bottom = 666.0
alignment = 1

[node name="Weather" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
margin_top = 13.0
margin_right = 500.0
margin_bottom = 513.0
rect_min_size = Vector2( 500, 500 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 4

[node name="English" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 517.0
margin_right = 500.0
margin_bottom = 596.0
custom_fonts/font = ExtResource( 2 )
text = "Weather name"
align = 1
valign = 1

[node name="Indo" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 600.0
margin_right = 500.0
margin_bottom = 652.0
custom_fonts/font = SubResource( 1 )
text = "Indonesia"
align = 1
valign = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 504.0
margin_right = 1112.0
margin_bottom = 666.0
alignment = 1

[node name="Text" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_top = 43.0
margin_right = 608.0
margin_bottom = 143.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = SubResource( 2 )
text = "Suitable Clothes to Wear
in This Weather"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
margin_top = 147.0
margin_right = 608.0
margin_bottom = 342.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_right = 200.0
margin_bottom = 195.0

[node name="Picture1" type="TextureRect" parent="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 160.0
rect_min_size = Vector2( 200, 160 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 4

[node name="Label1" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
margin_top = 164.0
margin_right = 200.0
margin_bottom = 195.0
custom_fonts/font = SubResource( 4 )
text = "Clothes"
align = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 204.0
margin_right = 404.0
margin_bottom = 195.0

[node name="Picture2" type="TextureRect" parent="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
margin_right = 200.0
margin_bottom = 160.0
rect_min_size = Vector2( 200, 160 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 4

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
margin_top = 164.0
margin_right = 200.0
margin_bottom = 195.0
custom_fonts/font = SubResource( 4 )
text = "Clothes"
align = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 408.0
margin_right = 608.0
margin_bottom = 195.0

[node name="Picture3" type="TextureRect" parent="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer3"]
margin_right = 200.0
margin_bottom = 160.0
rect_min_size = Vector2( 200, 160 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 4

[node name="Label3" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer3"]
margin_top = 164.0
margin_right = 200.0
margin_bottom = 195.0
custom_fonts/font = SubResource( 4 )
text = "Clothes"
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
margin_top = 346.0
margin_right = 608.0
margin_bottom = 541.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/HBoxContainer2"]
margin_right = 200.0
margin_bottom = 195.0

[node name="Picture4" type="TextureRect" parent="HBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer"]
margin_right = 200.0
margin_bottom = 160.0
rect_min_size = Vector2( 200, 160 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 4

[node name="Label4" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer"]
margin_top = 164.0
margin_right = 200.0
margin_bottom = 195.0
custom_fonts/font = SubResource( 4 )
text = "Clothes"
align = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/HBoxContainer2"]
margin_left = 204.0
margin_right = 404.0
margin_bottom = 195.0

[node name="Picture5" type="TextureRect" parent="HBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer2"]
margin_right = 200.0
margin_bottom = 160.0
rect_min_size = Vector2( 200, 160 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 4

[node name="Label5" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer2"]
margin_top = 164.0
margin_right = 200.0
margin_bottom = 195.0
custom_fonts/font = SubResource( 4 )
text = "Clothes"
align = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/HBoxContainer2"]
margin_left = 408.0
margin_right = 608.0
margin_bottom = 195.0

[node name="Picture6" type="TextureRect" parent="HBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer3"]
margin_right = 200.0
margin_bottom = 160.0
rect_min_size = Vector2( 200, 160 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 4

[node name="Label6" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer3"]
margin_top = 164.0
margin_right = 200.0
margin_bottom = 195.0
custom_fonts/font = SubResource( 4 )
text = "Clothes"
align = 1

[node name="Line" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_top = 545.0
margin_right = 608.0
margin_bottom = 622.0
custom_fonts/font = SubResource( 5 )
text = "Example:
I usually wear Clothes in Weather Day"
align = 1

[node name="BackButton" parent="." instance=ExtResource( 7 )]
targetScene = "WeatherMenu"

[node name="Overlay" parent="." instance=ExtResource( 6 )]
visible = false
